--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #server.port=1234
-#spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.fail-on-empty-beans=false
 spring.datasource.url=jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=root
