--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #server.port=1234
-spring.jackson.serialization.fail-on-empty-beans=false
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=root
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
-spring.h2.console.path=/C:/Program Files (x86)/H2/src/test
-server.port=1234
+#spring.jackson.serialization.fail-on-empty-beans=false
+#spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.username=sa
+#spring.datasource.password=root
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/C:/Program Files (x86)/H2/src/test
+#server.port=1234
