--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-#spring.datasource.username=hr
-#spring.datasource.password=hr
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-#server.port=1234
-spring.jackson.serialization.fail-on-empty-beans=false
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=root
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=hr
+spring.datasource.password=hr
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
-spring.h2.console.path=/C:/Program Files (x86)/H2/src/test
 server.port=1234
+spring.jackson.serialization.fail-on-empty-beans=false
+
