oracle connection added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+## change the driver, username and password according to your system
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=hr
 spring.datasource.password=hr
