--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## change the driver, username and password according to your system
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=hr
-spring.datasource.password=hr
+spring.datasource.username=system
+spring.datasource.password=0908
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-server.port=1234
+server.port=8086
 spring.jackson.serialization.fail-on-empty-beans=false
