--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-validation</artifactId>
+  			<version>2.3.4.RELEASE</version>
+		</dependency>
+		
 		
 	</dependencies>
 
