--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
    			<artifactId>validation-api</artifactId>
     		<version>2.0.0.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
 		<!-- <dependency>
 			<groupId>com.oracle</groupId>
