--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## change the driver, username and password according to your system
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=0908
+spring.datasource.username=hr
+spring.datasource.password=hr
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 server.port=8086
